# rust-aws-lambda-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs  user_manager.rs  users.rs
