[package]
name = "rust-aws-lambda-user-exists"
version = "0.1.0"
authors = ["gas3 <m.grandi89@gmail.com>"]

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.38"
lambda_runtime = "0.2.0"
config = "0.9"
rusoto_core = {version = "0.36.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.36.0", default_features = false, features=["rustls"]}
futures = "0.1.25"
